@@ -214,10 +214,3 @@ instcheck
 it
 setup
 check
-sig.o
-sig.a
-sig_catch.o
-sig_block.o
-hassgact.h
-hassgprm.h
-sig_pause.o
