@@ -1,0 +1,3 @@
+const char auto_home[] = "\
+\057\165\163\162\057\154\157\143\141\154\
+";
