@@ -1,1 +1,3 @@
-gcc -O2 -include /usr/include/errno.h
+gcc -O2 -Wimplicit -Wunused -Wcomment -Wchar-subscripts -Wuninitialized -Wshadow -Wcast-qual -Wcast-align -Wwrite-strings -DDUMPCACHE
+
+This will be used to compile .c files.
